...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0a113e"
    tools:context="com.cse110.flashbackmusicplayer.MainActivity">

    <Button
        android:id="@+id/switchMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
...
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tracksDisplayButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/abhaya_libre_bold"
        android:text="Tracks"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/albumsDisplayButton"
        app:layout_constraintTop_toBottomOf="@+id/switchMode" />

    <Button
...
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:divider="#244a54"
            android:dividerHeight="1dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/songsView" />

        <ListView
            android:id="@+id/songsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
...
